Switch from Binder to Google Colab

--- a/.template.foxs.ipynb
+++ b/.template.foxs.ipynb
@@ -14,9 +14,27 @@
     "Nup133 is one of the proteins that make up the yeast [Nuclear Pore Complex (NPC)](https://salilab.org/npc/). The structure of this protein has been characterized by both X-ray crystallography and\n",
     "small angle X-ray (SAXS).\n",
     "\n",
-    "IMP includes a command line tool `foxs` for handling SAXS profiles, which will be demonstrated in this example. There is also a [web interface](https://salilab.org/foxs/) available, which functions similarly.\n",
+    "IMP includes a command line tool `foxs` for handling SAXS profiles, which will be demonstrated in this example. There is also a [web interface](https://salilab.org/foxs/) available, which functions similarly.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "%%htmlonly\n",
+    "This tutorial can be followed in several ways:\n",
     "\n",
-    "For full help on the `foxs` tool, run from a command line:"
+    " - Download the files using the \"Clone or download\" link at the [tutorial's GitHub page](https://github.com/salilab/foxs_tutorial/) and use them in conjunction with this text.\n",
+    " - [Download the files from GitHub](https://github.com/salilab/foxs_tutorial/) and, using [Jupyter Notebook](https://jupyter.org/), open the notebook `foxs.ipynb`.\n",
+    " - [Load the tutorial directly in your browser](https://colab.research.google.com/github/salilab/foxs_tutorial/blob/main/foxs-colab.ipynb), courtesy of [Google Colaboratory](https://colab.research.google.com/). (This needs no software installed on your machine, but may take a while to load.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "%%colabonly\n",
+    "First, we need to install IMP and gnuplot:"
    ]
   },
   {
@@ -25,20 +43,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "foxs -h"
+    "#%%colabonly\n",
+    "!echo \"deb https://integrativemodeling.org/latest/download $(lsb_release -cs)/\" > /etc/apt/sources.list.d/salilab.list\n",
+    "!wget -O /etc/apt/trusted.gpg.d/salilab.asc https://salilab.org/~ben/pubkey4.asc\n",
+    "!apt update\n",
+    "!apt install imp gnuplot\n",
+    "import sys\n",
+    "sys.path.append('/usr/lib/python3.6/dist-packages')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "%%nbexclude\n",
-    "# Setup {#foxs_setup}\n",
-    "This tutorial can be followed in several ways:\n",
-    "\n",
-    " - Download the files using the \"Clone or download\" link at the [tutorial's GitHub page](https://github.com/salilab/foxs_tutorial/) and use them in conjunction with this text.\n",
-    " - [Download the files from GitHub](https://github.com/salilab/foxs_tutorial/) and, using [Jupyter Notebook](https://jupyter.org/), open the notebook `foxs.ipynb`.\n",
-    " - [Load the tutorial directly in your browser](https://mybinder.org/v2/gh/salilab/foxs_tutorial/main?filepath=foxs.ipynb), courtesy of [mybinder.org](https://mybinder.org/). (This needs no software installed on your machine, but may take a while to load.)"
+    "%%colabonly\n",
+    "Next, download the files for this tutorial from GitHub:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%%colabonly\n",
+    "!git clone https://github.com/salilab/foxs_tutorial.git\n",
+    "%cd foxs_tutorial/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "%%htmlonly\n",
+    "For full help on the `foxs` tool, run from a command line:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "%%htmlexclude\n",
+    "For full help on the `foxs` tool, run from a command line (the ! prefix here requests the Linux shell command line, rather than Python):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!foxs -h"
    ]
   },
   {
@@ -57,8 +112,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cd foxs/nup133\n",
-    "foxs 3KFO.pdb 23922_merge.dat"
+    "%cd foxs/nup133/\n",
+    "!foxs 3KFO.pdb 23922_merge.dat"
    ]
   },
   {
@@ -87,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "foxs -g 3KFO.pdb 3KFO-fill.B99990005.pdb 23922_merge.dat"
+    "!foxs -g 3KFO.pdb 3KFO-fill.B99990005.pdb 23922_merge.dat"
    ]
   },
   {
@@ -103,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gnuplot fit.plt"
+    "!gnuplot fit.plt"
    ]
   },
   {
@@ -119,28 +174,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "%%htmlonly\n",
     "<img src=\"images/nup133_fit.png\" width=\"450px\" title=\"FoXS plot of Nup133 and its SAXS profile\" />"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%%htmlexclude\n",
+    "from IPython.display import Image\n",
+    "Image(filename='fit.png')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "%%colabexclude\n",
     "For fitting multiple states against a SAXS profile, see the [next section on MultiFoXS](@file multifoxs)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "%%colabonly\n",
+    "For fitting multiple states against a SAXS profile, see the [next section on MultiFoXS](@file multifoxs-colab)."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Bash",
-   "language": "bash",
-   "name": "bash"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "shell",
-   "file_extension": ".sh",
-   "mimetype": "text/x-sh",
-   "name": "bash"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
