--- a/.template.index.ipynb
+++ b/.template.index.ipynb
@@ -10,11 +10,27 @@
     "Some proteins or their complexes can be characterized using small angle X-ray (SAXS) experiments. SAXS differs from X-ray crystallography in that it is applied to proteins in solution rather than crystals; thus, it can be applied to a much wider range of proteins in states more closely resembling their functional forms than X-ray crystallography. Because the sample is in solution, the SAXS information is rotationally averaged and so the resulting SAXS profile gives less structural information than X-ray\n",
     "crystallography; however, this is often sufficient to determine problems with the structure or to distinguish possible conformations.\n",
     "\n",
-    "IMP includes tools for fitting both single-state and multi-state models against SAXS data, both of which are introduced here:\n",
-    "\n",
+    "IMP includes tools for fitting both single-state and multi-state models against SAXS data, both of which are introduced here:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "%%colabexclude\n",
     "- [FoXS: fitting single structures against SAXS data](@file foxs)\n",
     "\n",
     "- [MultiFoXS: determination of multi-state models](@file multifoxs)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "%%colabonly\n",
+    "- [FoXS: fitting single structures against SAXS data](@file foxs-colab)\n",
+    "\n",
+    "- [MultiFoXS: determination of multi-state models](@file multifoxs-colab)\n"
    ]
   }
  ],
