--- a/.template.multifoxs.ipynb
+++ b/.template.multifoxs.ipynb
@@ -15,9 +15,27 @@
     "\n",
     "IMP includes a command line tool `multi_foxs` for enumeration and scoring of multi-state models against SAXS profiles. There is also a [web interface](https://salilab.org/multifoxs/) available, which functions similarly.\n",
     "\n",
-    "In this example, we will demonstrate how to use it using PDB structures of replication protein A and a simulated SAXS profile.\n",
+    "In this example, we will demonstrate how to use it using PDB structures of replication protein A and a simulated SAXS profile.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "%%htmlonly\n",
+    "This tutorial can be followed in several ways:\n",
     "\n",
-    "For full help on the `multi_foxs` tool, run from a command line:\n"
+    " - Download the files using the \"Clone or download\" link at the [tutorial's GitHub page](https://github.com/salilab/foxs_tutorial/) and use them in conjunction with this text.\n",
+    " - [Download the files from GitHub](https://github.com/salilab/foxs_tutorial/) and, using [Jupyter Notebook](https://jupyter.org/), open the notebook `multifoxs.ipynb`.\n",
+    " - [Load the tutorial directly in your browser](https://colab.research.google.com/github/salilab/foxs_tutorial/blob/main/multifoxs-colab.ipynb), courtesy of [Google Colaboratory](https://colab.research.google.com/). (This needs no software installed on your machine, but may take a while to load.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "%%colabonly\n",
+    "First, we need to install IMP:"
    ]
   },
   {
@@ -26,20 +44,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "multi_foxs --help"
+    "#%%colabonly\n",
+    "!echo \"deb https://integrativemodeling.org/latest/download $(lsb_release -cs)/\" > /etc/apt/sources.list.d/salilab.list\n",
+    "!wget -O /etc/apt/trusted.gpg.d/salilab.asc https://salilab.org/~ben/pubkey4.asc\n",
+    "!apt update\n",
+    "!apt install imp gnuplot\n",
+    "import sys\n",
+    "sys.path.append('/usr/lib/python3.6/dist-packages')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "%%nbexclude\n",
-    "# Setup {#mf_setup}\n",
-    "This tutorial can be followed in several ways:\n",
-    "\n",
-    " - Download the files using the \"Clone or download\" link at the [tutorial's GitHub page](https://github.com/salilab/foxs_tutorial/) and use them in conjunction with this text.\n",
-    " - [Download the files from GitHub](https://github.com/salilab/foxs_tutorial/) and, using [Jupyter Notebook](https://jupyter.org/), open the notebook `multifoxs.ipynb`.\n",
-    " - [Load the tutorial directly in your browser](https://mybinder.org/v2/gh/salilab/foxs_tutorial/main?filepath=multifoxs.ipynb), courtesy of [mybinder.org](https://mybinder.org/). (This needs no software installed on your machine, but may take a while to load.)"
+    "%%colabonly\n",
+    "Next, download the files for this tutorial from GitHub:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%%colabonly\n",
+    "!git clone https://github.com/salilab/foxs_tutorial.git\n",
+    "%cd foxs_tutorial/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "%%htmlonly\n",
+    "For full help on the `multi_foxs` tool, run from a command line:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "%%htmlexclude\n",
+    "For full help on the `multi_foxs` tool, run from a command line (the ! prefix here requests the Linux shell command line, rather than Python):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!multi_foxs --help"
    ]
   },
   {
@@ -67,8 +122,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cd multi_foxs/rpa\n",
-    "multi_foxs weighted.dat 1fguA.pdb 1fguB.pdb 1jmc.pdb"
+    "%cd multi_foxs/rpa\n",
+    "!multi_foxs weighted.dat 1fguA.pdb 1fguB.pdb 1jmc.pdb"
    ]
   },
   {
@@ -79,28 +134,50 @@
     "size 1, 2, and 3 in files `ensembles_size_1.txt`, `ensembles_size_2.txt`, and `ensembles_size_3.txt`,\n",
     "respectively. It also generates `multi_state_model_x_x_x.dat` files, containing the computed theoretical profile for the multi-state model and its fit against the experimental profile.\n",
     "\n",
-    "In this example, the best fit is obtained using a 3-state model (𝝌=1.74) `ensembles_size_3.txt`, with weights of 0.53, 0.197, and 0.27, showing a maximal deviation of 7% compared to the weights that were used to simulate the profile:\n",
-    "\n",
+    "In this example, the best fit is obtained using a 3-state model (𝝌=2.80) `ensembles_size_3.txt`, with weights of 0.53, 0.23, and 0.25, showing a maximal deviation of 2% compared to the weights that were used to simulate the profile:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "%%htmlonly\n",
     "```\n",
-    "1 |  1.74 | x1 1.74 (1.03, 0.53)\n",
-    "0   | 0.533 (0.533, 1.000) | 1jmc.pdb (0.333)\n",
-    "1   | 0.197 (0.197, 1.000) | 1fguA.pdb (0.333)\n",
-    "2   | 0.270 (0.270, 1.000) | 1fguB.pdb (0.333)\n",
+    "1 |  2.80 | x1 2.80 (1.03, 0.53)\n",
+    "    0   | 0.525 (0.525, 1.000) | 1jmc.pdb (0.333)\n",
+    "    1   | 0.226 (0.226, 1.000) | 1fguA.pdb (0.333)\n",
+    "    2   | 0.249 (0.249, 1.000) | 1fguB.pdb (0.333)\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%%htmlexclude\n",
+    "!cat ensembles_size_3.txt"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Bash",
-   "language": "bash",
-   "name": "bash"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "shell",
-   "file_extension": ".sh",
-   "mimetype": "text/x-sh",
-   "name": "bash"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
