--- a/index-colab.ipynb
+++ b/index-colab.ipynb
@@ -17,9 +17,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- [FoXS: fitting single structures against SAXS data](foxs.ipynb)\n",
+        "- [FoXS: fitting single structures against SAXS data](foxs-colab.ipynb)\n",
         "\n",
-        "- [MultiFoXS: determination of multi-state models](multifoxs.ipynb)\n"
+        "- [MultiFoXS: determination of multi-state models](multifoxs-colab.ipynb)\n"
       ]
     }
   ],
