--- a/foxs-colab.ipynb
+++ b/foxs-colab.ipynb
@@ -24,6 +24,44 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "First, we need to install IMP and gnuplot:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!echo \"deb https://integrativemodeling.org/latest/download $(lsb_release -cs)/\" > /etc/apt/sources.list.d/salilab.list\n",
+        "!wget -O /etc/apt/trusted.gpg.d/salilab.asc https://salilab.org/~ben/pubkey4.asc\n",
+        "!apt update\n",
+        "!apt install imp gnuplot\n",
+        "import sys\n",
+        "sys.path.append('/usr/lib/python3.6/dist-packages')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Next, download the files for this tutorial from GitHub:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!git clone https://github.com/salilab/foxs_tutorial.git\n",
+        "%cd foxs_tutorial/"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "For full help on the `foxs` tool, run from a command line (the ! prefix here requests the Linux shell command line, rather than Python):"
       ]
     },
@@ -124,7 +162,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "For fitting multiple states against a SAXS profile, see the [next section on MultiFoXS](multifoxs.ipynb)."
+        "For fitting multiple states against a SAXS profile, see the [next section on MultiFoXS](multifoxs-colab.ipynb)."
       ]
     }
   ],
