--- a/.template.multifoxs.ipynb
+++ b/.template.multifoxs.ipynb
@@ -48,7 +48,7 @@
     "!echo \"deb https://integrativemodeling.org/latest/download $(lsb_release -cs)/\" > /etc/apt/sources.list.d/salilab.list\n",
     "!wget -O /etc/apt/trusted.gpg.d/salilab.asc https://salilab.org/~ben/pubkey4.asc\n",
     "!apt update\n",
-    "!apt install imp gnuplot\n",
+    "!apt install imp\n",
     "import sys\n",
     "sys.path.append('/usr/lib/python3.6/dist-packages')"
    ]
